2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (initialize_terminal_and_keymaps): Don't quit if
	terminal is dumb, because we might not be running interactively.
	(initialize_info_session): Quit if terminal is dumb.
	* info/terminal.c (terminal_initialize_terminal): Comment corrected.
	(terminal_prep_terminal): Return 0 for a dumb terminal.

	* info/t/Init-test.inc: Run tests with TERM=dumb by default.
	* info/t/Init-intera.inc: Run interactive tests with TERM=vt100.
	Suggested by Karl Berry.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_node_contents): Pass offset relative to
	start of node contents of "*" starting reference to
	scan_reference_label.  Report by Benno Schulenberg 8th May, 2014. 

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (begin_multiple_window_info_session): Deal with
	references to desired nodes being invalid and display dir node
	as a back-up.

	* info/filesys.h (DEFAULT_INFOPATH): "." moved to end of path.

	* info/t/file-relative-path.sh: New test.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: Redirect stdin as well as stdout and stderr.
	* info/t (all files): Look in $srcdir for test data to faciliate
	VPATH builds.
	* info/t/file.sh: Use simple filename argument to --file.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi: Give overview of invocation.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (main): If slash in first non-option argument,
	interpret as if it had been passed with --file.
	* info/session.c (info_select_reference): Null check for label
	field of REFERENCE.
	* info/t/relative-path.sh: New test.

2014-05-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (filesys_error_string): Correct comment about
	whether return value should be freed by caller or not.

	* info/info-utils.c (scan_reference_label): Remove superseded